Fixed spacing in treebeard nodes

--- a/src/client/stylesheets/components/_sidebar.scss
+++ b/src/client/stylesheets/components/_sidebar.scss
@@ -175,8 +175,8 @@ $icons: '../icons/';
         z-index: -10;
         position: absolute;
         padding: 0px;
-        border: solid 2px #333333;
-        border-top: none;
+        border-left: solid 2px #333333;
+        border-right: solid 2px #333333;
         width: 100%;
         height: 100%;
 
@@ -538,6 +538,7 @@ $icons: '../icons/';
         align-items: center;
         width: calc(100% - 15px);
         min-height: inherit;
+        padding: 0px 5px;
 
         &:hover:not(.divider) {
             cursor: pointer;
@@ -546,7 +547,6 @@ $icons: '../icons/';
     }
 
     .node .icon {
-        margin-left: 5px;
         margin-right: 8px;
         font-size: 24px;
     }
